Producto: Se agregan estilos para uso de la api
- Se agregan estilos para dar apariencia a los checkbox de switches.
- Se agrega estilos de posicionamiento para ser reutilizados.

--- a/templates/base_v3.html
+++ b/templates/base_v3.html
@@ -19,7 +19,10 @@
     <link rel="stylesheet" href="{% static 'V3/dist/css/skins/_all-skins.min.css' %}">
     <!-- Icon Page -->
     <link rel="shortcut icon" type="image/png" href="{% static "img/car.png" %}">
-
+    <!-- checkbox -->
+    <link rel="stylesheet" href="{% static 'css/checkbox.css' %}">
+    <!-- estilos comunes de posicionamiento -->
+    <link rel="stylesheet" href="{% static 'css/common.css' %}">
     {% block style %}{% endblock %}
 </head>
 <body class="hold-transition skin-blue sidebar-mini{{ status_bar }}">
