Product: Se incorpora botones y modal a la interfaz
- Se incertan los botones flotantes en la seccion de productos y se agrega
  el modal de marca.
- Se elimina el modal que se usaba en la secion anterior para agrgar
  marca, y se utiliza la plantilla del modal para reutilizar codigo y
  evitar duplicidad.

--- a/templates/Producto/producto_list.html
+++ b/templates/Producto/producto_list.html
@@ -1,5 +1,11 @@
 {% extends "base_v3.html" %}
 
+{% block style %}
+    {% load static %}
+    <!-- checkbox -->
+    <link rel="stylesheet" href="{% static 'css/floating_buttons.css' %}">
+{% endblock %}
+
 {% block title %} Productos {% endblock %}
 
 {% block encabezado %} Lista de productos {% endblock %}
@@ -9,6 +15,10 @@
 {% endblock %}
 
 {% block conte %}
+
+{% include "Producto/floating_buttons.html" %}
+
+{% include "Producto/modal_brand_form.html" %}
 
 {% include "Producto/modal_product_edit.html" %}
 
