--- a/templates/Producto/producto_new.html
+++ b/templates/Producto/producto_new.html
@@ -16,40 +16,7 @@
 {% endblock %}
 
 {% block conte %}
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span
-                            class="sr-only">Close</span></button>
-                    <h4 class="modal-title" id="myModalLabel"><i class="glyphicon glyphicon-tag"></i> Agregar marca</h4>
-                </div>
-                <div class="modal-body">
-
-                    <div id="mensaje">
-                    </div>
-                    <p>Por favor, ingrese la nueva marca para agregar.</p>
-
-                    <form id="formMarca">
-                        <div class="form-group">
-                            <label class="control-label">Marca</label>
-                            <input class="form-control" id="id_marca_modal" maxlength="30" name="marca" type="text">
-
-                        </div>
-                        <br/>
-                        <button type="submit" class="btn btn-primary" id="btnmarca">
-                            <i class=" glyphicon glyphicon-floppy-saved"></i> Guardar
-                        </button>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Salir</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End modal-->
+    {% include 'Producto/modal_brand_form.html' %}
 
     <div class="box{% block marco %} box-success{% endblock %}">
     <div class="box-header with-border">
