Pventa: Se refactoriza el menu izquierdo de la plantilla base.
- Se pasa el codigo del "sidebar" (menu izuierdo) a una plantilla separada
  para un mejor mantenimiento y estetica del coigo.
- Se eliminan opciones no necesarias en dicho menu

--- a/templates/base_v3.html
+++ b/templates/base_v3.html
@@ -188,111 +188,7 @@
     </nav>
   </header>
 
-  <!-- =============================================== -->
-
-  <!-- Left side column. contains the sidebar -->
-  <aside class="main-sidebar">
-    <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar">
-      <!-- Sidebar user panel -->
-      <div class="user-panel">
-        <div class="pull-left image">
-            {% if user.profile.avatar %}
-            <img src="{{ user.profile.avatar.url }}"  class="img-circle" alt="User Image">
-            {% else %}
-            <img src="{% static 'img/Login.png' %}"  class="img-circle" alt="User Image">
-            {%  endif %}
-        </div>
-        <div class="pull-left info">
-          <p>{{ user.username }}</p>
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-        </div>
-      </div>
-      <!-- search form -->
-      <form action="#" method="get" class="sidebar-form">
-        <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="Search...">
-              <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-                </button>
-              </span>
-        </div>
-      </form>
-      <!-- /.search form -->
-      <!-- sidebar menu: : style can be found in sidebar.less -->
-      <ul class="sidebar-menu">
-        <li class="header">Navegacion principal</li>
-        <li class="treeview">
-          <a href="{% url 'Venta:url_index' %}">
-            <i class="fa fa-shopping-cart"></i> <span>Hacer venta</span></i>
-          </a>
-        </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-barcode"></i>
-            <span>Productos</span>
-            <i class="fa fa-angle-left pull-right"></i>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="{% url 'Producto:url_lista' 1 %}"><i class="fa fa-circle-o"></i> Lista de productos</a></li>
-            <li><a href="{% url 'Producto:url_nuevo' %}"><i class="fa fa-circle-o"></i> Agregar producto</a></li>
-          </ul>
-        </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-tags"></i>
-            <span>Marcas</span>
-            <i class="fa fa-angle-left pull-right"></i>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="{% url 'Producto:url_lista_marca' 1 %}"><i class="fa fa-circle-o"></i> Lista de marcas</a></li>
-            <li><a href="{% url 'Producto:url_nueva_marca' %}"><i class="fa fa-circle-o"></i> Agregar marca</a></li>
-          </ul>
-        </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-book"></i>
-            <span>Varios</span>
-            <i class="fa fa-angle-left pull-right"></i>
-          </a>
-          <ul class="treeview-menu">
-            <li><a href="#"><i class="fa fa-circle-o"></i> Biografias</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Mapas</a></li>
-            <li><a href="#"><i class="fa fa-circle-o"></i> Monografias</a></li>
-          </ul>
-        </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-bar-chart-o"></i> <span>Estadisticas</span>
-            <i class="fa fa-angle-left pull-right"></i>
-          </a>
-          <ul class="treeview-menu">
-            <li>
-              <a href="#"><i class="fa fa-circle-o"></i> Reportes <i class="fa fa-angle-left pull-right"></i></a>
-              <ul class="treeview-menu">
-                <li><a href="{% url 'Estadistica:url_lista' 1 %}"><i class="fa fa-circle-o"></i> Venta</a></li>
-                <li>
-                  <a href="#"><i class="fa fa-circle-o"></i> Inventario <i class="fa fa-angle-left pull-right"></i></a>
-                  <ul class="treeview-menu">
-                    <li><a href="#"><i class="fa fa-circle-o"></i> Productos</a></li>
-                    <li><a href="#"><i class="fa fa-circle-o"></i> Marcas</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li><a href="{% url 'PerfilUsuario:url_lista' %}"><i class="fa fa-users"></i> <span>Administrar Usuarios</span></a></li>
-        <li class="header">LABELS</li>
-        <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
-        <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
-        <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
-      </ul>
-    </section>
-    <!-- /.sidebar -->
-  </aside>
-
-  <!-- =============================================== -->
+    {% include 'include/sidebar.html' %}
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
