Prouct: Se agrega funcionalidad para agregar marca.
- Permite agregar nuevas marcas mediante el modal de marca de manera
  asincrona mediante los nuevos botones y modal previamente agregados.

--- a/templates/Producto/producto_list.html
+++ b/templates/Producto/producto_list.html
@@ -160,5 +160,6 @@
     <script src="{% static 'js/product/product-ajax.js' %}"></script>
     <script type="text/javascript">
         var base_api_url = '{{ url_api }}';
+        var base_url_brand = '/api/brand/';
     </script>
 {% endblock %}
