--- a/templates/Producto/modal_brand_form.html
+++ b/templates/Producto/modal_brand_form.html
@@ -16,6 +16,7 @@
                     <div class="form-group">
                         <label class="control-label">Marca</label>
                         <input class="form-control" id="id_marca_modal" maxlength="30" name="marca" type="text">
+                        <span id="help-marca" class="help-block"></span>
                     </div>
                     <br/>
                     <button type="submit" class="btn btn-primary" id="btnmarca">
